Fix accessability/contrast issues

--- a/app/(home)/HomePage.module.css
+++ b/app/(home)/HomePage.module.css
@@ -31,21 +31,21 @@
 
 .ButtonLink {
   background: var(--highlight);
-  color: var(--background-3);
+  color: var(--text-on-accent);
 }
 
 .ButtonLink:hover {
   background: var(--highlight-alt);
-  color: var(--background);
+  color: var(--text-on-accent);
 }
 
 .ButtonLinkAlt {
   background: var(--background-6);
-  color: var(--highlight);
+  color: var(--text-color);
   border: 1px solid var(--highlight);
 }
 
 .ButtonLinkAlt:hover {
   background: var(--highlight);
-  color: var(--background);
+  color: var(--text-on-accent);
 }
